<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="battery_saving">Экономия батареи</string>
    <string name="battery_charge_level">Уровень заряда аккумулятора</string>
    <string name="consumption_for_the_last_hour">Расход за последний час</string>
    <string name="calculate">Вычисляем…</string>
    <string name="view_screen_time_statistics">Посмотреть статистику экранного времени</string>
    <string name="we_recommend_extending_the_operation_of_the_phone">Рекомендуем продлить работу телефона</string>
    <string name="our_app_will_help_to_reduce_the_battery_load_so_that_your_phone_works_longer">Наше приложение поможет снизить нагрузку батареи, чтобы ваш телефон работал дольше</string>
    <string name="extend_phone_operation">Продлить работу телефона</string>
    <string name="D_percent">%d %%</string>
    <string name="speeding_up_your_phone">Ускоряем ваш телефон</string>
    <string name="reducing_the_load_on_the_battery">Уменьшаем нагрузку на аккумулятор</string>
    <string name="checking_the_system">Проверяем систему</string>
    <string name="freezing_background_processes">Замораживаем фоновые процессы</string>
    <string name="the_working_time_of_the_phone_has_been_extended">Время работы телефона продлено</string>
    <string name="the_battery_load_is_reduced">Нагрузка на батарею снижена</string>

</resources>