<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/head_title"
        style="@style/Text.Header_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:text="@string/battery_saving"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_bar"
        app:layout_constraintStart_toEndOf="@id/back_arrow"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animate_phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@id/guideline_lottie_anim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_bottom_bar"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/battery_level" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_lottie_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.57" />

    <TextView
        android:id="@+id/charge_level"
        style="@style/Text.Body_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="@string/battery_charge_level"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toStartOf="@id/percent_charge_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_lottie_anim" />

    <TextView
        android:id="@+id/percent_charge_level"
        style="@style/Text.Body_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/charge_level"
        app:layout_constraintTop_toBottomOf="@id/guideline_lottie_anim"
        tools:text="57%" />

    <View
        android:id="@+id/separator_line_for_charge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/gray_dark"
        android:paddingBottom="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/charge_level" />

    <TextView
        android:id="@+id/consumption_for_hour"
        style="@style/Text.Body_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/consumption_for_the_last_hour"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toStartOf="@id/consumption_for_hour_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_line_for_charge" />

    <TextView
        android:id="@+id/consumption_for_hour_percent"
        style="@style/Text.Body_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/consumption_for_hour"
        app:layout_constraintTop_toBottomOf="@id/separator_line_for_charge"
        tools:text="@string/calculate" />

    <View
        android:id="@+id/separator_line_for_consumption"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/gray_dark"
        android:paddingBottom="@dimen/_4sdp"
        app:layout_constraintTop_toBottomOf="@id/consumption_for_hour" />

    <TextView
        android:id="@+id/view_screen_statistics"
        style="@style/Text.Body_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:maxLines="2"
        android:text="@string/view_screen_time_statistics"
        android:textColor="@color/dark_blue"
        app:layout_constraintEnd_toStartOf="@id/arrow_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator_line_for_consumption" />

    <ImageView
        android:id="@+id/arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toBottomOf="@id/view_screen_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_screen_statistics"
        app:layout_constraintTop_toTopOf="@id/view_screen_statistics" />

    <TextView
        android:id="@+id/recommend_extending"
        style="@style/Text.Header_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/we_recommend_extending_the_operation_of_the_phone"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_screen_statistics" />

    <TextView
        android:id="@+id/description_help"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/golos_text_medium"
        android:text="@string/our_app_will_help_to_reduce_the_battery_load_so_that_your_phone_works_longer"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommend_extending" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_app"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_28sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/background_not_transparent_button_blue"
        android:text="@string/extend_phone_operation"
        android:textAllCaps="false"
        android:textAppearance="@style/Text.Header_4"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>